[package]
name = "grrs"
description = "A tool to search files"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
anyhow = "1.0.80"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"

[lints.clippy]
enum_glob_use = "deny"
unwrap_used = "deny"
nursery = "deny"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
